if ENABLE_TEST

noinst_PROGRAMS=cuteTest

cuteTest_SOURCES= \
	cuteTest.cpp \
	containerTest.cpp \
	avcodecTest.cpp \
	audioTest.cpp \
	videoTest.cpp \
	netTest.cpp \
	utilTest.cpp \
	encoderDecoderTest.cpp \
	webrtcTest.cpp

cuteTest_CFLAGS=-I../ $(TEST_CFLAGS) \
	$(OPENCV_CFLAGS) \
	$(OPENAL_CFLAGS) \
	$(MP3LAME_CFLAGS) \
	$(FAAC_CFLAGS) \
	$(OPENH264_CFLAGS) \
	$(SPEEXDSP_CFLAGS) \
	$(SPEEX_CFLAGS) \
	$(OPUS_CFLAGS) \
	$(LIBAVCODEC_CFLAGS) \
	$(FAAD_CFLAGS) \
	$(JPEG_CFLAGS) \
	$(APPLE_CFLAGS) \
	$(X264_CFLAGS) \
	$(X265_CFLAGS) \
	$(THEORA_CFLAGS) \
	$(DAALAENC_CFLAGS) \
	$(DAALADEC_CFLAGS) \
	$(VORBISENC_CFLAGS) \
	$(VORBISDEC_CFLAGS) \
	$(WEBRTC_CFLAGS) \
	$(SOUNDTOUCH_CFLAGS) \
	$(FDKAAC_CFLAGS)
cuteTest_CXXFLAGS=-std=c++0x -I../ $(TEST_CFLAGS) \
	$(OPENCV_CFLAGS) \
	$(OPENAL_CFLAGS) \
	$(MP3LAME_CFLAGS) \
	$(FAAC_CFLAGS) \
	$(OPENH264_CFLAGS) \
	$(SPEEXDSP_CFLAGS) \
	$(SPEEX_CFLAGS) \
	$(OPUS_CFLAGS) \
	$(LIBAVCODEC_CFLAGS) \
	$(FAAD_CFLAGS) \
	$(JPEG_CFLAGS) \
	$(APPLE_CFLAGS) \
	$(X264_CFLAGS) \
	$(X265_CFLAGS) \
	$(THEORA_CFLAGS) \
	$(DAALAENC_CFLAGS) \
	$(DAALADEC_CFLAGS) \
	$(VORBISENC_CFLAGS) \
	$(VORBISDEC_CFLAGS) \
	$(WEBRTC_CFLAGS) \
	$(SOUNDTOUCH_CFLAGS) \
	$(FDKAAC_CFLAGS)
cuteTest_LDADD=../ttLibC/libttLibC.a $(TEST_LIBS) \
	$(OPENCV_LIBS) \
	$(OPENAL_LIBS) \
	$(MP3LAME_LIBS) \
	$(FAAC_LIBS) \
	$(OPENH264_LIBS) \
	$(SPEEXDSP_LIBS) \
	$(SPEEX_LIBS) \
	$(OPUS_LIBS) \
	$(LIBAVCODEC_LIBS) \
	$(FAAD_LIBS) \
	$(JPEG_LIBS) \
	$(APPLE_LIBS) \
	$(X264_LIBS) \
	$(X265_LIBS) \
	$(THEORA_LIBS) \
	$(DAALAENC_LIBS) \
	$(DAALADEC_LIBS) \
	$(VORBISENC_LIBS) \
	$(VORBISDEC_LIBS) \
	$(WEBRTC_LIBS) \
	$(SOUNDTOUCH_LIBS) \
	$(FDKAAC_LIBS)

endif
