AUTOMAKE_OPTIONS=subdir-objects

lib_LIBRARIES=libttLibC.a

libttLibC_a_SOURCES= \
	container/flv/type/audioTag.c \
	container/flv/type/headerTag.c \
	container/flv/type/metaTag.c \
	container/flv/type/videoTag.c \
	container/flv/flvReader.c \
	container/flv/flvTag.c \
	container/flv/flvWriter.c \
	container/mp3/mp3Frame.c \
	container/mp3/mp3Reader.c \
	container/mp3/mp3Writer.c \
	container/mpegts/type/pat.c \
	container/mpegts/type/pes.c \
	container/mpegts/type/pmt.c \
	container/mpegts/type/sdt.c \
	container/mpegts/mpegtsPacket.c \
	container/mpegts/mpegtsReader.c \
	container/mpegts/mpegtsWriter.c \
	container/container.c \
	container/misc2.c \
	decoder/audioConverterDecoder.c \
	decoder/avcodecDecoder.c \
	decoder/jpegDecoder.c \
	decoder/mp3lameDecoder.c \
	decoder/openh264Decoder.cpp \
	decoder/opusDecoder.c \
	decoder/speexDecoder.c \
	decoder/vtDecompressSessionH264Decoder.c \
	encoder/audioConverterEncoder.c \
	encoder/avcodecEncoder.c \
	encoder/faacEncoder.c \
	encoder/jpegEncoder.c \
	encoder/mp3lameEncoder.c \
	encoder/openh264Encoder.cpp \
	encoder/opusEncoder.c \
	encoder/speexEncoder.c \
	encoder/vtCompressSessionH264Encoder.c \
	encoder/x264Encoder.c \
	encoder/x265Encoder.c \
	frame/audio/aac.c \
	frame/audio/adpcmImaWav.c \
	frame/audio/audio.c \
	frame/audio/mp3.c \
	frame/audio/nellymoser.c \
	frame/audio/opus.c \
	frame/audio/pcmAlaw.c \
	frame/audio/pcmf32.c \
	frame/audio/pcmMulaw.c \
	frame/audio/pcms16.c \
	frame/audio/speex.c \
	frame/audio/vorbis.c \
	frame/video/bgr.c \
	frame/video/flv1.c \
	frame/video/h264.c \
	frame/video/h265.c \
	frame/video/jpeg.c \
	frame/video/theora.c \
	frame/video/video.c \
	frame/video/vp6.c \
	frame/video/vp8.c \
	frame/video/vp9.c \
	frame/video/wmv1.c \
	frame/video/wmv2.c \
	frame/video/yuv420.c \
	frame/frame.c \
	net/client/rtmp/type/aggregate.c \
	net/client/rtmp/type/audio.c \
	net/client/rtmp/type/command.c \
	net/client/rtmp/type/system.c \
	net/client/rtmp/type/video.c \
	net/client/rtmp/header.c \
	net/client/rtmp/message.c \
	net/client/rtmp/netConnection.c \
	net/client/rtmp/netStream.c \
	net/tcp.c \
	net/tetty/bootstrap.c \
	net/tetty/context.c \
	net/tetty/promise.c \
	net/udp.c \
	resampler/audioResampler.c \
	resampler/imageResampler.c \
	resampler/speexdspResampler.c \
	util/amfUtil.c \
	util/audioUnitUtil.c \
	util/beepUtil.c \
	util/byteUtil.c \
	util/crc32Util.c \
	util/dynamicBufferUtil.c \
	util/forkUtil.c \
	util/hexUtil.c \
	util/httpUtil.c \
	util/ioUtil.c \
	util/linkedListUtil.c \
	util/openalUtil.c \
	util/opencvUtil.c \
	util/stlListUtil.cpp \
	util/stlMapUtil.cpp \
	allocator.c \
	ttLibC.c

libttLibC_a_CFLAGS=$(OPENCV_CFLAGS) $(OPENAL_CFLAGS) $(MP3LAME_CFLAGS) $(FAAC_CFLAGS) $(OPENH264_CFLAGS) $(SPEEXDSP_CFLAGS) $(SPEEX_CFLAGS) $(OPUS_CFLAGS) $(LIBAVCODEC_CFLAGS) $(FAAD_CFLAGS) $(JPEG_CFLAGS) $(APPLE_CFLAGS) $(X264_CFLAGS) $(X265_CFLAGS)
libttLibC_a_CXXFLAGS=-std=c++0x $(OPENCV_CFLAGS) $(OPENAL_CFLAGS) $(MP3LAME_CFLAGS) $(FAAC_CFLAGS) $(OPENH264_CFLAGS) $(SPEEXDSP_CFLAGS) $(SPEEX_CFLAGS) $(OPUS_CFLAGS) $(LIBAVCODEC_CFLAGS) $(FAAD_CFLAGS) $(JPEG_CFLAGS) $(APPLE_CFLAGS) $(X264_CFLAGS) $(X265_CFLAGS)
