AUTOMAKE_OPTIONS=subdir-objects

lib_LIBRARIES=libttLibC.a

libttLibC_a_SOURCES= \
	container/flv/type/audioTag.c \
	container/flv/type/headerTag.c \
	container/flv/type/metaTag.c \
	container/flv/type/videoTag.c \
	container/flv/flvReader.c \
	container/flv/flvTag.c \
	container/flv/flvWriter.c \
	container/mkv/type/simpleBlock.c \
	container/mkv/mkvReader.c \
	container/mkv/mkvTag.c \
	container/mkv/mkvWriter.c \
	container/mp3/mp3Frame.c \
	container/mp3/mp3Reader.c \
	container/mp3/mp3Writer.c \
	container/mp4/type/ctts.c \
	container/mp4/type/elst.c \
	container/mp4/type/stco.c \
	container/mp4/type/stsc.c \
	container/mp4/type/stsz.c \
	container/mp4/type/stts.c \
	container/mp4/type/trun.c \
	container/mp4/mp4Atom.c \
	container/mp4/mp4Reader.c \
	container/mp4/mp4Writer.c \
	container/mpegts/type/pat.c \
	container/mpegts/type/pes.c \
	container/mpegts/type/pmt.c \
	container/mpegts/type/sdt.c \
	container/mpegts/mpegtsPacket.c \
	container/mpegts/mpegtsReader.c \
	container/mpegts/mpegtsWriter.c \
	container/container.c \
	container/misc2.c \
	decoder/audioConverterDecoder.c \
	decoder/avcodecDecoder.c \
	decoder/jpegDecoder.c \
	decoder/mp3lameDecoder.c \
	decoder/openh264Decoder.cpp \
	decoder/opusDecoder.c \
	decoder/speexDecoder.c \
	decoder/theoraDecoder.c \
	decoder/vorbisDecoder.c \
	decoder/vtDecompressSessionDecoder.c \
	encoder/audioConverterEncoder.c \
	encoder/avcodecEncoder.c \
	encoder/faacEncoder.c \
	encoder/jpegEncoder.c \
	encoder/mp3lameEncoder.c \
	encoder/msAacEncoder.cpp \
	encoder/msH264Encoder.cpp \
	encoder/openh264Encoder.cpp \
	encoder/opusEncoder.c \
	encoder/speexEncoder.c \
	encoder/theoraEncoder.c \
	encoder/vorbisEncoder.c \
	encoder/vtCompressSessionEncoder.c \
	encoder/x264Encoder.c \
	encoder/x265Encoder.c \
	frame/audio/aac.c \
	frame/audio/adpcmImaWav.c \
	frame/audio/audio.c \
	frame/audio/mp3.c \
	frame/audio/nellymoser.c \
	frame/audio/opus.c \
	frame/audio/pcmAlaw.c \
	frame/audio/pcmf32.c \
	frame/audio/pcmMulaw.c \
	frame/audio/pcms16.c \
	frame/audio/speex.c \
	frame/audio/vorbis.c \
	frame/video/bgr.c \
	frame/video/flv1.c \
	frame/video/h264.c \
	frame/video/h265.c \
	frame/video/jpeg.c \
	frame/video/theora.c \
	frame/video/video.c \
	frame/video/vp6.c \
	frame/video/vp8.c \
	frame/video/vp9.c \
	frame/video/wmv1.c \
	frame/video/wmv2.c \
	frame/video/yuv420.c \
	frame/frame.c \
	net/client/rtmp/data/clientObject.c \
	net/client/rtmp/header/rtmpHeader.c \
	net/client/rtmp/message/acknowledgement.c \
	net/client/rtmp/message/aggregateMessage.c \
	net/client/rtmp/message/amf0Command.c \
	net/client/rtmp/message/amf0DataMessage.c \
	net/client/rtmp/message/audioMessage.c \
	net/client/rtmp/message/rtmpMessage.c \
	net/client/rtmp/message/setChunkSize.c \
	net/client/rtmp/message/setPeerBandwidth.c \
	net/client/rtmp/message/userControlMessage.c \
	net/client/rtmp/message/videoMessage.c \
	net/client/rtmp/message/windowAcknowledgementSize.c \
	net/client/rtmp/tetty/rtmpClientHandler.c \
	net/client/rtmp/tetty/rtmpCommandHandler.c \
	net/client/rtmp/tetty/rtmpDecoder.c \
	net/client/rtmp/tetty/rtmpEncoder.c \
	net/client/rtmp/tetty/rtmpHandshake.c \
	net/client/rtmp/rtmpConnection.c \
	net/client/rtmp/rtmpStream.c \
	net/client/webrtc/factory.cpp \
	net/client/webrtc/mediaStream.cpp \
	net/client/webrtc/peerConnection.cpp \
	net/client/websocket2/handler.c \
	net/client/websocket2/handshake.c \
	net/client/websocket2/websocket.c \
	net/net.c \
	net/tcp.c \
	net/tetty/bootstrap.c \
	net/tetty/context.c \
	net/tetty/promise.c \
	net/tetty2/tcpBootstrap.c \
	net/udp.c \
	resampler/audioResampler.c \
	resampler/imageResampler.c \
	resampler/imageResizer.c \
	resampler/libyuvResampler.c \
	resampler/soundtouchResampler.cpp \
	resampler/speexdspResampler.c \
	resampler/swscaleResampler.c \
	resampler/swresampleResampler.c \
	util/amfUtil.c \
	util/audioUnitUtil.c \
	util/beepUtil.c \
	util/byteUtil.c \
	util/crc32Util.c \
	util/dynamicBufferUtil.c \
	util/flvFrameUtil.c \
	util/forkUtil.c \
	util/hexUtil.c \
	util/httpUtil.c \
	util/ioUtil.c \
	util/linkedListUtil.c \
	util/mmAudioLoopbackUtil.cpp \
	util/msGlobalUtil.cpp \
	util/openalUtil.c \
	util/opencvUtil.c \
	util/stlListUtil.cpp \
	util/stlMapUtil.cpp \
	util/tetty2/bootstrap.c \
	util/tetty2/context.c \
	util/tetty2/promise.c \
	allocator.c \
	ttLibC.c

libttLibC_a_CFLAGS= \
	$(OPENCV_CFLAGS) \
	$(OPENAL_CFLAGS) \
	$(MP3LAME_CFLAGS) \
	$(FAAC_CFLAGS) \
	$(OPENH264_CFLAGS) \
	$(SPEEXDSP_CFLAGS) \
	$(SPEEX_CFLAGS) \
	$(OPUS_CFLAGS) \
	$(LIBAVCODEC_CFLAGS) \
	$(FAAD_CFLAGS) \
	$(JPEG_CFLAGS) \
	$(APPLE_CFLAGS) \
	$(X264_CFLAGS) \
	$(X265_CFLAGS) \
	$(THEORA_CFLAGS) \
	$(DAALAENC_CFLAGS) \
	$(DAALADEC_CFLAGS) \
	$(VORBISENC_CFLAGS) \
	$(VORBISDEC_CFLAGS) \
	$(WEBRTC_CFLAGS) \
	$(SOUNDTOUCH_CFLAGS) \
	$(FDKAAC_CFLAGS) \
	$(LIBYUV_CFLAGS) \
	$(LIBSWSCALE_CFLAGS) \
	$(LIBSWRESAMPLE_CFLAGS)
libttLibC_a_CXXFLAGS=-std=c++0x \
	$(OPENCV_CFLAGS) \
	$(OPENAL_CFLAGS) \
	$(MP3LAME_CFLAGS) \
	$(FAAC_CFLAGS) \
	$(OPENH264_CFLAGS) \
	$(SPEEXDSP_CFLAGS) \
	$(SPEEX_CFLAGS) \
	$(OPUS_CFLAGS) \
	$(LIBAVCODEC_CFLAGS) \
	$(FAAD_CFLAGS) \
	$(JPEG_CFLAGS) \
	$(APPLE_CFLAGS) \
	$(X264_CFLAGS) \
	$(X265_CFLAGS) \
	$(THEORA_CFLAGS) \
	$(DAALAENC_CFLAGS) \
	$(DAALADEC_CFLAGS) \
	$(VORBISENC_CFLAGS) \
	$(VORBISDEC_CFLAGS) \
	$(WEBRTC_CFLAGS) \
	$(SOUNDTOUCH_CFLAGS) \
	$(FDKAAC_CFLAGS) \
	$(LIBYUV_CFLAGS) \
	$(LIBSWSCALE_CFLAGS) \
	$(LIBSWRESAMPLE_CFLAGS)
